# Garage-Save-eXtender

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  make_wine_wrapper.sh
.github/workflows/: Build And Deploy.yml
API/: README.md
API/Cpp/: CStoredCar.h  GSXAPI.cpp  GSXAPI.h
gsx/: CExtraSaveData.cpp  CExtraSaveData.h  CLog.cpp  CLog.h  CRC32LICENSE.md  CStoredCar.h  CVehicleExtraData.cpp  CVehicleExtraData.h  CustomSaveFile.hpp  Exports.cpp  InternalCallbacks.cpp  InternalCallbacks.hpp  LoadSaveStructs.h  crc32.cpp  crc32.h  grgExtraManager.cpp  grgExtraManager.h  main.cpp
gsx/tests/: CMakeLists.txt  TestSaveSerializer.cpp  maintests.cpp
injector/: saving.hpp
plugins/SaveLicensePlate/: CMakeLists.txt  README.md  main.cpp
